--- a/texttransformer/index.html
+++ b/texttransformer/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  
+  <script src="https://unpkg.com/compromise"></script>
+
+  <style>  
 <style>
   .text-area-container {
     display: flex;
